set01/problem07_compile_errors.txt
Compilation started at 12/1/2023, 3:57:03 PM
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem07.c: In function 'main':
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem07.c:11:14: error: 'a' undeclared (first use in this function)
     output(n,a,sum);
              ^
c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem07.c:11:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation finished at 12/1/2023, 3:57:03 PM
Compilation started at 12/1/2023, 3:58:21 PM
Compilation finished at 12/1/2023, 3:58:21 PM
Compilation started at 12/1/2023, 3:59:00 PM
Compilation finished at 12/1/2023, 3:59:01 PM
Compilation started at 12/1/2023, 3:59:35 PM
Compilation finished at 12/1/2023, 3:59:35 PM
Compilation started at 12/1/2023, 4:04:19 PM
Compilation finished at 12/1/2023, 4:04:19 PM
Compilation started at 12/1/2023, 4:04:29 PM
Compilation finished at 12/1/2023, 4:04:29 PM
Compilation started at 12/1/2023, 4:10:46 PM
Compilation finished at 12/1/2023, 4:10:46 PM
Compilation started at 12/1/2023, 4:11:39 PM
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file c:\Users\ketan\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Ketan09092\set01\problem07.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation finished at 12/1/2023, 4:11:40 PM
Compilation started at 12/1/2023, 4:12:34 PM
Compilation finished at 12/1/2023, 4:12:34 PM
Compilation started at 12/1/2023, 4:13:11 PM
Compilation finished at 12/1/2023, 4:13:12 PM
